terraform/rds.tf

resource "aws_db_subnet_group" "rds_subnets" {
  name       = "${var.project}-db-subnet-group"
  subnet_ids = local.selected_subnets
}

resource "aws_db_instance" "postgres" {
  identifier             = "${var.project}-db"
  engine                 = "postgres"
  instance_class         = "db.t3.micro"
  allocated_storage      = 20
  db_name                = "minha_api"
  username               = var.db_username
  password               = var.db_password
  skip_final_snapshot    = true
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name   = aws_db_subnet_group.rds_subnets.name
  publicly_accessible    = true
  tags                   = { Name = "${var.project}-rds" }
}
